Mobile overlap fix attempt

--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ html, body {
   width: 100%;
   height: 100%;
   opacity: 0%;
+  z-index: -1;
 }
 
 /*white header background */
